--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/typescript": "^0.4.29",
+    "express": "^4.19.2",
+    "typescript": "^5.5.4"
+  }
 }
