--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/server.ts",
-    "start": "ts-node src/server.ts"
+    "dev": "nodemon --watch src --exec ts-node-dev src/server.ts",
+    "test": "npx tsc && node build/index.js",
+    "start": "nodemon src/index.ts --exec ts-node"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +13,17 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/node": "^22.2.0",
     "@types/typescript": "^0.4.29",
     "express": "^4.19.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/nodemon": "^1.19.6",
     "body-parser": "^1.20.2",
+    "mysql2": "^3.11.0",
+    "nodemon": "^3.1.4",
     "ts-node-dev": "^2.0.0"
   }
 }
