--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemon": "^1.19.6",
     "body-parser": "^1.20.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4",
     "ts-node-dev": "^2.0.0"
