--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemon": "^1.19.6",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4",
