--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/nodemon": "^1.19.6",
+    "@types/yup": "^0.29.14",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "yup": "^1.4.0"
   }
 }
