--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/nodemon": "^1.19.6",
+    "@types/sharp": "^0.31.1",
     "@types/yup": "^0.29.14",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
@@ -31,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4",
+    "sharp": "^0.33.5",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.4.0"
   }
