--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
@@ -27,6 +28,7 @@
     "@types/sharp": "^0.31.1",
     "@types/yup": "^0.29.14",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
