--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,13 +2,23 @@ upstream backendserver {
   server backend_cita_sakinah:4000;
 }
 
+upstream frontendserver {
+  server frontend_cita_sakinah:5170;
+}
+
 server {
   listen 80;
-  server_name localhost;
-  
+  server_name 202.73.25.70;
+  client_max_body_size 10000M;
+
   location /api/ {
+    client_max_body_size 10000M;
     proxy_pass http://backendserver;
   }
 
+  location / {
+    client_max_body_size 10000M;
+    proxy_pass http://frontendserver;
+  }
 }
 
