--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,13 @@
 FROM node:18-alpine
+
 WORKDIR /src
+
+# Set Node.js memory limit before running npm
+ENV NODE_OPTIONS="--max-old-space-size=3072"
+
 COPY package.json .
 RUN npm install
-COPY . .    
+COPY . .
 RUN npm run build
 EXPOSE 5170
 CMD ["npm","run", "preview"]
